# semantic

./: .editorconfig  .gitignore  .pdbrc  .pre-commit-hooks.sh  .python-version  Makefile  README.md  True  conftest.py  coverage.xml  noxfile.py  pyproject.toml  setup.cfg
.github/: release-drafter.yml
.github/workflows/: check-version.yml  coverage.yml  doc.yml  docs.yml  lint.yml  release-drafter.yml  release.yml  tag-version.yml  test.yml  type.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/mantic/: __init__.py  types.py
src/mantic/actions/: _build_signatures.py  _bump_version.py  _check_deprecated.py  _check_version.py  _parse_files.py  check_signature.py
src/mantic/domain/: __init__.py  _argument.py  _to_value.py
src/mantic/infra/: __init__.py  logs.py
src/mantic/infra/repo/: __init__.py  files.py  versions.py
src/mantic/utils/: __init__.py  _arrays.py  _functions.py
src/mantic_cli/: __init__.py  __main__.py  config.py
src/mantic_cli/tasks/: _check_deprecated.py  _check_version.py  _task.py  _tasks.py
src/mantic_cli/views/: __init__.py  _base.py  _theme.py  _to_options.py  help_view.py  home_view.py
src/pysemver/: __init__.py  __main__.py  _bar.py  _builder.py  _bumper.py  _check_deprecated.py  _check_version.py  _config.py  _fn.py  _func_checker.py  _models.py  _parser.py  _repo.py  _tasks.py  _theme.py  _types.py  _ui.py  _views.py  bar.py  check_deprecated.py  check_version.py  types.py
src/pysemver/_actions/: __init__.py  _build_signatures.py  _check_deprecated.py  _check_signature.py  _check_version.py  _parse_files.py
src/pysemver/_app/: _bumper.py
src/pysemver/_app/_functions/: __init__.py  _build_signatures.py  _check_deprecated.py
src/pysemver/_app/_versions/: _check_version.py
src/pysemver/_cli/: _bar.py  _theme.py  _views.py
src/pysemver/_cli/_views/: __init__.py  _help.py  _home.py
src/pysemver/_domain/: _suffix.py  _to_type.py  _to_value.py
src/pysemver/_infra/: __init__.py  _logs.py  _repo.py  _repo_files.py  _repo_versions.py
src/pysemver/_infra/_repos/: _files.py  _versions.py
src/pysemver/_utils/: __init__.py  _arrays.py  _functions.py  _pipeop.py  _strategies.py
src/pysemver/actions/: __init__.py  _build_signatures.py  _bump_version.py  _check_deprecated.py  _check_signature.py  _check_version.py  _parse_files.py  check_signature.py
src/pysemver/domain/: __init__.py  _arg.py  _arg_type.py  _argument.py  _default.py  _exit.py  _ret_type.py  _signature.py  _suffix.py  _to_def.py  _to_type.py  _to_value.py  _type_annotation.py  _version.py
src/pysemver/infra/: __init__.py  logs.py
src/pysemver/infra/repo/: __init__.py  _base.py  files.py  versions.py
src/pysemver/services/: __init__.py
src/pysemver/services/signatures/: __init__.py  _check_signature.py
src/pysemver/utils/: __init__.py  _arrays.py  _builders.py  _functional.py  _functions.py  _vectorial.py
src/pysemver_cli/: __init__.py  __main__.py  _config.py  types.py
src/pysemver_cli/_tasks/: __init__.py  _check_deprecated.py  _check_version.py  _task.py  _tasks.py
src/pysemver_cli/_views/: __init__.py  _base.py  _help.py  _help_view.py  _home.py  _home_view.py  _theme.py  _to_options.py
src/pysemver_cli/tasks/: __init__.py  _check_deprecated.py  _check_version.py
src/pysemver_cli/views/: __init__.py  _to_options.py  help_view.py  home_view.py
src/pysemver_hypothesis/: __init__.py
tests/: __init__.py  test_bar.py  test_check_deprecated.py  test_check_version.py  test_func_checker.py  test_pysemver.py
tests/fixtures/: .gitignore  __init__.py  bar.py  func.py  func_with_changed_args.py  func_with_defaults.py  func_with_more_args.py  func_with_more_defaults.py  func_with_types.py
tests/functional/: __init__.py  check-deprecated.robot  check-version.robot  home.robot  test_check_deprecated.robot  test_check_version.robot  test_home.robot  test_logs.py
tests/integration/: __init__.py  test_check_deprecated.py  test_check_signature.py  test_check_version.py  test_func_checker.py  test_pipes.py
tests/unit/: __init__.py  test_bump_version.py  test_check_signature.py
