[tool.poetry]
name = "pysemver"
version = "0.3.0"
description = ""
authors = ["Mauko Quiroga <mauko@pm.me>"]
packages = [{include = "pysemver", from = "src"}]

[tool.poetry.dependencies]
python = "~3.7 || ~3.8 || ~3.9"
aenum = "<4"
funcy = "<2"
invoke = "<2"
numpy = ">=1.7, <1.22"
pipeop = "<1"
rich = "<11"
termcolor = "<2"
typical = "<3"
typing_extensions = { version = "<4", python = "~3.7" }

[tool.poetry.dev-dependencies]
autopep8 = "<2"
coverage = { extras = ["toml"], version = "<7" }
ipython = "<8"
mypy = "<1"
nox-poetry = "<1"
pytest = "<7"
pytest-cov = "<4"
pytest-mock = "<4"
pytype = "^2021.10.4"
pyupgrade = "<3"
typeguard = "<3"
wemake-python-styleguide = "<1"
xdoctest = "<1"

[tool.poetry.scripts]
pysemver = 'pysemver:main.run'

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pysemver"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
addopts = [
    "-qx",
    "--disable-pytest-warnings",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
    "--typeguard-packages=pysemver",
    "--xdoctest",
    ]
doctest_optionflags = [
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
    "NORMALIZE_WHITESPACE",
    "NUMBER",
    ]

[tool.mypy]
install_types = true
non_interactive = true
plugins = ["typic.mypy"]
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
