[tool.poetry]
name = "pysemver"
version = "0.3.0"
description = "Command-line tools to facilitate semantic versioning."
license = "EUPL-1.2-or-later"
authors = ["Mauko Quiroga <mauko@pm.me>"]
maintainers = ["Mauko Quiroga <mauko@pm.me>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/maukoquiroga/pysemver"
documentation = "https://pysemver.readthedocs.io"
keywords = []
classifiers = []
packages = [{include = "pysemver", from = "src"}]

[tool.poetry.dependencies]
python = "~3.7 || ~3.8 || ~3.9"
aenum = "<4"
crosshair-tool = "<1"
cytoolz = "<1"
deal = "<5"
invoke = "<2"
lambdas = "<1"
numpy = ">=1.7, <1.22"
pipeop = "<1"
rich = "<11"
termcolor = "<2"
toml = "<1"
typical = "<3"
typing_extensions = {version = "<4", python = "~3.7"}

[tool.poetry.dev-dependencies]
autopep8 = "<2"
codecov = "<3"
coverage = {extras = ["toml"], version = "<7"}
interrogate = "<2"
ipython = "<8"
mypy = "<1"
pytest = "<7"
pytest-cov = "<4"
pytest-mock = "<4"
pytype = "^2021.10.4"
pyupgrade = "<3"
Sphinx = "<5"
sphinx-autodoc-typehints = "<2"
typeguard = "<3"
wemake-python-styleguide = "<1"
xdoctest = "<1"

[tool.poetry.scripts]
pysemver = 'pysemver:main.run'

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pysemver"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.interrogate]
fail-under = 100
ignore-init-method = true
ignore-magic = true
ignore-nested-classes = false
ignore-nested-functions = true
ignore-private = true
ignore-semiprivate = true
omit-covered-files = true
verbose = 2

[tool.pytest.ini_options]
addopts = [
    "-qx",
    "--disable-pytest-warnings",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
    "--typeguard-packages=pysemver",
    "--xdoctest",
    ]
doctest_optionflags = [
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
    "NORMALIZE_WHITESPACE",
    "NUMBER",
    ]

[tool.mypy]
install_types = true
non_interactive = true
plugins = [
    "lambdas.contrib.mypy.lambdas_plugin",
    "typic.mypy",
    ]
strict = true

[tool.pysemver]
ignore = [
    ".editorconfig",
    ".github",
    ".gitignore",
    ".pdbrc",
    ".pre-commit-hooks.sh",
    ".python-version",
    ".readthedocs.yml",
    "docs",
    "LICENSE",
    "Makefile",
    "noxfile.py",
    "README.md",
    "setup.cfg",
    "tests",
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
